--- a/templates/cluster-template-rke2.yaml
+++ b/templates/cluster-template-rke2.yaml
@@ -42,6 +42,13 @@ spec:
   identitySecret: 
     namespace: ${NAMESPACE}
     name: hv-identity-secret
+{UPDATE_CLOUD_PROVIDER:-  updateCloudProviderConfig: 
+    cloudConfigCredentialsSecretKey: cloud-config
+    cloudConfigCredentialsSecretName: cloud-config
+    manifestsConfigMapKey: harvester-cloud-provider-deploy.yaml
+    manifestsConfigMapName: harvester-csi-driver-addon
+    manifestsConfigMapNamespace: ${NAMESPACE}
+    }
 ---
 apiVersion: v1
 kind: Secret
