fixing inconsistent naming of components.yaml
Signed-off-by: PatrickLaabs <patrick.laabs@me.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,4 +81,4 @@ jobs:
         # name: ${{ env.TAG }}
         # files: |
           # out/metadata.yaml
-          # out/components.yaml
+          # out/infrastructure-components.yaml
