Fix typo in variable definition
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/templates/cluster-template-rke2-generateCPI.yaml
+++ b/templates/cluster-template-rke2-generateCPI.yaml
@@ -41,7 +41,7 @@ spec:
   identitySecret: 
     namespace: ${NAMESPACE}
     name: hv-identity-secret
-{UPDATE_CLOUD_PROVIDER:-  updateCloudProviderConfig: 
+${UPDATE_CLOUD_PROVIDER:-  updateCloudProviderConfig: 
     cloudConfigCredentialsSecretKey: cloud-config
     cloudConfigCredentialsSecretName: cloud-config
     manifestsConfigMapKey: harvester-cloud-provider-deploy.yaml
