Fixed issue with missing fields in updateCloudProviderConfig
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/templates/cluster-template-rke2-generateCPI.yaml
+++ b/templates/cluster-template-rke2-generateCPI.yaml
@@ -44,6 +44,8 @@ spec:
 ${UPDATE_CLOUD_PROVIDER:-  updateCloudProviderConfig: 
     cloudConfigCredentialsSecretKey: cloud-config
     cloudConfigCredentialsSecretName: cloud-config
+    manifestsConfigMapKey: harvester-cloud-provider-deploy.yaml
+    manifestsConfigMapName: harvester-csi-driver-addon
     manifestsConfigMapNamespace: ${NAMESPACE}
     }
 ---
