--- a/templates/cluster-template-rke2-generateCPI.yaml
+++ b/templates/cluster-template-rke2-generateCPI.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   name: ${NAMESPACE}
 ---
-apiVersion: cluster.x-k8s.io/v1beta1
+apiVersion: cluster.x-k8s.io/v1beta2
 kind: Cluster 
 metadata:
   namespace: ${NAMESPACE}
@@ -15,11 +15,11 @@ ${RANCHER_TURTLES_LABEL}
     cni: external
 spec:
   controlPlaneRef:
-    apiVersion: controlplane.cluster.x-k8s.io/v1alpha1
+    apiGroup: controlplane.cluster.x-k8s.io
     kind: RKE2ControlPlane
     name: ${CLUSTER_NAME}-control-plane
   infrastructureRef:
-    apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
+    apiGroup: infrastructure.cluster.x-k8s.io
     kind: HarvesterCluster
     name: ${CLUSTER_NAME}-hv
 ---
@@ -57,15 +57,16 @@ metadata:
 data: 
   kubeconfig: ${HARVESTER_KUBECONFIG_B64}
 ---
-apiVersion: controlplane.cluster.x-k8s.io/v1alpha1
+apiVersion: controlplane.cluster.x-k8s.io/v1beta1
 kind: RKE2ControlPlane
 metadata:
   namespace: ${NAMESPACE}
   name: ${CLUSTER_NAME}-control-plane
 spec:
   replicas: ${CONTROL_PLANE_MACHINE_COUNT}
-  agentConfig:
-    version: ${KUBERNETES_VERSION}+rke2r1
+  version: ${KUBERNETES_VERSION}+rke2r1
+  rolloutStrategy:
+    type: RollingUpdate
   serverConfig:
     cni: calico
     cloudProviderName: external
@@ -75,18 +76,16 @@ spec:
     name: ${CLUSTER_NAME}-cp-machine
     namespace: ${NAMESPACE}
 ---
-apiVersion: bootstrap.cluster.x-k8s.io/v1alpha1
+apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: RKE2ConfigTemplate
 metadata:
   namespace: ${NAMESPACE}
   name: ${CLUSTER_NAME}-worker
 spec:
   template:
-    spec:
-      agentConfig:
-        version: ${KUBERNETES_VERSION}+rke2r1
+    spec: {}
 ---
-apiVersion: cluster.x-k8s.io/v1beta1
+apiVersion: cluster.x-k8s.io/v1beta2
 kind: MachineDeployment
 metadata:
   namespace: ${NAMESPACE}
@@ -101,16 +100,14 @@ spec:
     spec:
       bootstrap:
         configRef:
-          apiVersion: bootstrap.cluster.x-k8s.io/v1alpha1
+          apiGroup: bootstrap.cluster.x-k8s.io
           kind: RKE2ConfigTemplate
           name: ${CLUSTER_NAME}-worker
-          namespace: ${NAMESPACE}
       clusterName: ${CLUSTER_NAME}
       infrastructureRef:
-        apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
+        apiGroup: infrastructure.cluster.x-k8s.io
         kind: HarvesterMachineTemplate
         name: ${CLUSTER_NAME}-wk-machine
-        namespace: ${NAMESPACE}
       version: ${KUBERNETES_VERSION}+rke2r1
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
@@ -153,7 +150,7 @@ spec:
         volumeSize: ${VM_DISK_SIZE}
         bootOrder: 0
 ---
-apiVersion: addons.cluster.x-k8s.io/v1beta1
+apiVersion: addons.cluster.x-k8s.io/v1beta2
 kind: ClusterResourceSet
 metadata:
   name: crs-harvester-ccm
@@ -167,7 +164,7 @@ spec:
     name: cloud-controller-manager-addon
   strategy: Reconcile
 ---
-apiVersion: addons.cluster.x-k8s.io/v1beta1
+apiVersion: addons.cluster.x-k8s.io/v1beta2
 kind: ClusterResourceSet
 metadata:
   name: crs-harvester-csi
@@ -181,7 +178,7 @@ spec:
     name: harvester-csi-driver-addon
   strategy: Reconcile
 ---
-apiVersion: addons.cluster.x-k8s.io/v1beta1
+apiVersion: addons.cluster.x-k8s.io/v1beta2
 kind: ClusterResourceSet
 metadata:
   name: crs-calico-chart-config
