--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,7 +92,7 @@ jobs:
         if gh release view ${{ github.ref_name }} > /dev/null; then
           echo ${{ github.ref_name }} release exists
         else
-          gh release create ${{ github.ref_name }} --draft --notes "Draft release for ${{ github.ref_name }}"
+          gh release create ${{ github.ref_name }} --draft --generate-notes
         fi
         gh release upload ${{ github.ref_name }} out/metadata.yaml
         gh release upload ${{ github.ref_name }} out/infrastructure-components.yaml
