--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ tilt-provider.json
 # IDE files
 .idea/
 .vscode/
-
+.devcontainer/
 
 # All environment variables should be added to .env file
 *.env
