Added support for ClusterClass with an example template, fixes #87
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_harvesterclustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_harvesterclustertemplates.yaml
@@ -45,6 +45,8 @@ spec:
             description: Spec is the specification for the template resource
             properties:
               template:
+                description: HarvesterClusterTemplateResource defines the template
+                  resource for HarvesterCluster.
                 properties:
                   metadata:
                     description: |-
