--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachinetemplates.yaml
@@ -50,6 +50,7 @@ spec:
                     properties:
                       cpu:
                         description: CPU is the number of CPU to assign to the VM.
+                        format: int32
                         type: integer
                       failureDomain:
                         description: FailureDomain defines the zone or failure domain
