Added some new conditions for HarvesterCluster resource, Fixes #90
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ tilt-provider.json
 
 # All environment variables should be added to .env file
 *.env
+
+# Aider files
+.aider.*
+conditions-adding.md
