fixed issue related to setting a harvestermachine to be ready, added .status.initialization.provisioned field
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachines.yaml
@@ -752,6 +752,14 @@ spec:
                 type: string
               failureReason:
                 type: string
+              initialization:
+                description: Initialization is an object that defines the initialization
+                  of the VM on Harvester.
+                properties:
+                  provisioned:
+                    description: Provisioned shows if the VM has been provisioned.
+                    type: boolean
+                type: object
               ready:
                 description: Ready is true when the provider resource is ready.
                 type: boolean
