Added some options to release notes generation
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -3,6 +3,10 @@ changelog:
     - title: 🚀 Enhancements
       labels:
         - kind/feature
+    - title: 👒 Dependency bumps
+      labels:
+        - area/dependency
+        - area/build-and-release
     - title: 🐛 Bugs
       labels:
         - kind/bug
